# citeguard

./: .env.example  .gitignore  README.md  agent.card.json  handler.py
citeguard/: clients.py  match.py  parse.py  report.py  verify.py
citeguard-agent/: README.md  REPO_FEEDBACK.md  pyproject.toml  requirements.txt
citeguard-agent/citeguard/: __init__.py  models.py  report.py
citeguard-agent/examples/: a2a_smoke.py
citeguard-agent/tests/: sample.bib  test_clients.py  test_match.py  test_parse.py
examples/: run_local.py  sample_refs.txt
tests/: test_verify_offline.py
